# kaldi_vosk_win_cmake

./: .gitignore  CMakeLists.txt  adoptVocabulary.cmd  main.cpp
src/base/: CMakeLists.txt  version.h
src/chain/: CMakeLists.txt
src/cudamatrix/: CMakeLists.txt
src/decoder/: CMakeLists.txt
src/feat/: CMakeLists.txt
src/fstext/: CMakeLists.txt
src/gmm/: CMakeLists.txt
src/hmm/: CMakeLists.txt
src/itf/: CMakeLists.txt
src/ivector/: CMakeLists.txt
src/lat/: CMakeLists.txt
src/lm/: CMakeLists.txt  arpa-lm-compiler.cc
src/matrix/: CMakeLists.txt  kaldi-blas.h
src/nnet2/: CMakeLists.txt  nnet-component.cc
src/nnet3/: CMakeLists.txt  nnet-example-utils.cc  nnet-test-utils.cc
src/online2/: CMakeLists.txt
src/rnnlm/: CMakeLists.txt
src/transform/: CMakeLists.txt
src/tree/: CMakeLists.txt
src/util/: CMakeLists.txt  kaldi-table-test.cc
